# compsim

./: Cargo.toml  README.md
examples/: lambda-test.rs  turing-test.rs
lib/: church.rs  lib.rs  turing.rs
src/: brainfuck.rs  lambda.rs
